<resources>
    <string name="app_name">ESIGStudentApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rejoignez_notre_portail_mobile">Rejoignez notre portail mobile</string>
    <string name="cr_er_un_nouveau_compte">Créer un nouveau compte</string>
    <string name="votre_adresse_mail">votre adresse mail</string>
    <string name="pr_nom">prénom</string>
    <string name="nom">nom</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="vous_avez_d_j_un_compte">Vous avez déjà un compte ?</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="se_d_connecter">se déconnecter</string>
    <string name="se_connecter">se connecter</string>
    <string name="se_connecter_au_portail_de_l_esig">Se connecter au portail de l\'ESIG</string>
    <string name="pas_encore_inscrit">pas encore inscrit ?</string>
    <string name="heure_de_d_but">Heure de début</string>
    <string name="type_d_examen">Type d\'examen</string>
    <string name="salle">Salle</string>
    <string name="ajouter_examen">Ajouter examen</string>
    <string name="cours">Cours</string>
    <string name="bulletin">Bulletin</string>
    <string name="calendrier">Calendrier</string>
    <string name="horaire">Horaire</string>
    <string name="horaires">Horaires</string>
    <string name="imagehoraire">imageHoraire</string>
    <string name="accueil">Accueil</string>
    <string name="tpg">TPG</string>
    <string name="bienvenue_sur_le_portail_mobile_de_l_esig_vous_retrouverez_l_ensemble_de_vos_informations_utiles_sur_cette_application_pour_vos_tudes_l_ecole_sup_rieure_d_informatique_de_gestion">Bienvenue sur le portail mobile de l\'ESIG. Vous retrouverez l\'ensemble de vos informations utiles sur cette application pour vos études à l\'Ecole supérieure d\'informatique de gestion =)</string>
    <string name="cliquez_au_milieu_pour_ajouter_votre_horaire">Cliquez au milieu pour ajouter votre horaire</string>
    <string name="image_horaire">image_Horaire</string>
    <string name="mon_bulletin">Mon bulletin</string>
    <string name="ajouterExa">+</string>
    <string name="information">information</string>
    <string name="_17">17</string>
    <string name="grange_canal">Grange-Canal :</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="arr_t_de_bus_proximit">Arrêt de bus à proximité</string>
    <string name="_33">33</string>
    <string name="_12">12</string>
    <string name="gradelle">Gradelle :</string>
    <string name="esig_com">esig.com</string>
    <string name="profile">profile</string>
    <string name="mon_profil">Mon profil</string>
    <string name="bienvenue_sur_le_portail_mobile_esig_student_app_vous_retrouverez_toutes_les_informations_utiles_pour_vos_tudes_ecole_sup_rieure_informatique_de_gestion">Bienvenue sur le portail mobile ESIG Student App. Vous retrouverez toutes les informations utiles pour vos études à Ecole supérieure informatique de gestion</string>
    <string name="esig_ch">esig.ch</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
</resources>